# daqpyutils

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: check_links.yml  lint.yml  test.yml
diagrams/: example.drawio  example.md
docs/: README.md
src/daqpyutils/apps/: __main_create_python_dunedaq_package__.py  create_python_dunedaq_package.py
src/daqpyutils/repository_handling/: defaults.py
src/daqpyutils/templates/: application.jinja  gitignore.jinja  pre-commit-config.jinja  pyproject.jinja  readme.jinja
src/daqpyutils/templates/github/workflows/: lint.yml
src/daqpyutils/templates/github_workflows/: check_links.yml  lint.yml  mypy_test.yml  pytest_cov.yml  taplo.toml
tests/apps/: test_create_python_dunedaq_package.py
