[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
description = "Description left as an exercise for the developer."
name = "daqpyutils"
readme = "docs/README.md"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
  "click==8.1.7",
  "GitPython==3.1.44",
  "kafka-python==2.0.2",
  "pytz==2025.2",
  "Jinja2==3.1.4",
  "rich==13.9.4",
  "sh==2.1.0",
  "types-pytz==2025.2.0.20250516",
  "daqpytools @ git+https://github.com/PawelPlesniak/daqpytools@develop",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daqpyutils = ["templates/*", "templates/**/*"]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
  "black",
  "pytest-cov",
  "pytest-mypy",
  "taplo",
]
test = ["pytest", "pytest-mypy", "pytest-cov"]

[project.scripts]
daqpytools-logging-demonstrator = "daqpytools.apps.__main_logging_demonstrator__:main"
create-python-dunedaq-package = "daqpyutils.apps.__main_create_python_dunedaq_package__:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["D205", "D100", "D104"]
pydocstyle.convention = "google"
select = [
  "D",
  "E",
  "F",
  "I",
  "UP",
  "RUF",
  "ANN",
  "S",
  "N",
  "ERA",
  "B",
  "C4",
  "A",
  "RET",
  "T20",
  "ISC",
  "G",
  "TRY",
  "T",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "D104", "S101", "ANN201"]

[tool.black]
force-exclude = '''
/(
    \.git
  | \.github
  | \.ruff_cache
)/

'''
line-length = 88
skip-magic-trailing-comma = true
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=. --cov-report=html --doctest-modules --ignore=docs/ --ignore=src/daqpytools/apps/"
norecursedirs = [".git", ".github", "venv"]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
