[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
description = "Description left as an exercise for the developer."
name = "daqpyutils"
version = "0.1.0"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
  "click",
  "GitPython",
  "kafka-python",
  "pytz",
  "Jinja2",
  "rich",
  "sh",
  "types-pytz"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mypy",
  "ruff",
  "pre-commit",
]
test = ["pytest", "pytest-mypy", "pytest-cov"]

[project.scripts]
create-python-dunedaq-package = "daqpyutils.apps.create_python_dunedaq_package:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daqpyutils = ["templates/*", "templates/**/*"]

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=. --cov-report=html --doctest-modules --ignore=docs/ --ignore=src/daqpytools/apps/"
norecursedirs = [".git", ".github", "venv"]
testpaths = ["tests"]

[tool.coverage.run]
source = [ "{{ PACKAGE_NAME }}" ]
omit = ["tests/*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["D205", "D100", "D104"]
pydocstyle.convention = "google"
select = [
  "D",     # pydocstyle: check for docstring conventions
  "E",     # pycodestyle errors: standard PEP 8 errors
  "F",     # Pyflakes: check for common programming errors
  "I",     # isort: best practices for import order and sorting
  "UP",    # pyupgrade: suggestions for code modernization
  "RUF",   # Ruff-specific rules: built-in Ruff-specific warnings
  "ANN",   # flake8-annotations: check for missing type annotations
  "S",     # flake8-bandit: check for common security issues
  "N",     # pep8-naming: check for PEP 8 naming conventions
  "ERA",   # eradicate: find and remove commented-out code
  "B",     # flake8-bugbear: find likely bugs and design problems
  "C4",    # flake8-comprehensions: improve list/dict/set comprehensions
  "A",     # flake8-builtins: check for shadowing of Python built-in symbols
  "RET",   # flake8-return: check for unnecessary return statements
  "ISC",   # flake8-implicit-str-concat: detect implicit string concatenation
  "G",     # flake8-logging-format: ensure proper logging format strings
  "TRY",   # tryceratops: prevent abuse of try/except blocks
  "T",     # flake8-debugger: catch tracepoints or debugger calls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "D104", "S101", "ANN201"]

[tool.mypy]
mypy_path = "src"

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_any_explicit = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_unimported = true

warn_unused_configs = true
show_error_codes = true

